--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,6 +1,9 @@
 .header {
   padding: 0 0 36px;
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
 }
 
 @media screen and (max-width: 768px) {
