--- a/src/blocks/page/page.css
+++ b/src/blocks/page/page.css
@@ -4,6 +4,7 @@
   font-family: 'Inter', 'Arial', sans-serif;
   box-sizing: border-box;
   background-color: #000;
+  min-height: 100vh;
 }
 
 @media screen and (max-width: 1080px) {
