--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,10 @@
 /* header */
 @import url(./blocks/header/header.css);
 @import url(./blocks/header/__logo/header__logo.css);
+@import url(./blocks/header/__email/header__email.css);
+@import url(./blocks/header/__container/header__container.css);
+@import url(./blocks/header/__link/header__link.css);
+@import url(./blocks/header/__button/header__button.css);
 
 /* profile */
 @import url(./blocks/profile/profile.css);
@@ -58,3 +62,19 @@
 @import url(./blocks/img-figure/__image/img-figure__image.css);
 @import url(./blocks/img-figure/__caption/img-figure__caption.css);
 @import url(./blocks/img-figure/__description/img-figure__description.css);
+
+/* popup tooltip */
+@import url(./blocks/popup/__icon/popup__icon.css);
+@import url(./blocks/popup/__icon/_type/popup__icon_type_error.css);
+@import url(./blocks/popup/__icon/_type/popup__icon_type_success.css);
+@import url(./blocks/popup/__message/popup__message.css);
+@import url(./blocks/header/__container/header__container.css);
+
+/* auth */
+@import url(./blocks/auth/auth.css);
+@import url(./blocks/auth/__button/auth__link.css);
+@import url(./blocks/auth/__form/auth__form.css);
+@import url(./blocks/auth/__input/auth__input.css);
+@import url(./blocks/auth/__submit-button/auth__submit-button.css);
+@import url(./blocks/auth/__text/auth__text.css);
+@import url(./blocks/auth/__title/auth__title.css);
